samples/_failures_safe/1761412999_f63980_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9258398f.c: In function ‘main’:
./samples/SAFE/__tmp_9258398f.c:152:17: error: expected declaration or statement at end of input
  152 |                 }
      |                 ^
./samples/SAFE/__tmp_9258398f.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9258398f.c:152:17: error: expected declaration or statement at end of input
